--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708625.md#1" target="_blank">【命理】孟婆汤真有其事 记得前世女子实证</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/09/709040123071497-320x200.jpg" align ="left"></a>孟婆汤即迷魂汤让人遗忘过去世记忆，是否真的有这回事呢？清代赵吉士《寄园寄所寄》记载一记得前生女子，她讲起的阴间的事，与世间所传的无异。她也讲死者转生时必须饮迷魂汤，她怎么没饮呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 11:00 AM	</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722257.md#1" target="_blank">五杯酒（下）</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722257.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1504061459072483-150x120.jpg" align ="left"></a>小时候没人教过我们怎么谈心，学校、教堂也没教，等到了三、四十岁，甚至是八十岁，就怎么也没法把话说出口了。工程师又不是一出生就知道怎么盖桥，那是要学习的技能。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:52 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710273.md#1" target="_blank">天地清明引(137) 东流水－浩然正气2</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710273.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/4325af0fb8983b64fd5334fb52749c7c-150x120.jpg" align ="left"></a>金府，火葬朱丹之后，金海便与小翠儿躲在府里，不敢出门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722814.md#1" target="_blank">纪实散文：一夜惊梦（14）</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/14/n11722814.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15de2688b2e6dc75_ttl7dayZVN_shutterstock_85204393-1-150x120.jpg" align ="left"></a>青的儿子
 
@@ -23,12 +24,11 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706297.md#1" target="_blank">姐姐因病离世 原来真是回天界享福去了</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706297.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/123-150x120.jpg" align ="left"></a>我姐姐1971年出生的。从小她就体弱，后来就得了白血病。我爸着急啊，他特别相信算命的，就找了一高人给姐看相，那人一见我姐就说，这女孩在天上是侍奉菩萨的小童，做错事给打下来了。她不属于我们凡间，下来就是要吃苦赎罪的，时间到了还得回天界啊。我爸问他，“什么时间回去啊？”那高人说，她在凡间也就待22年，然后就回天界享福了。他.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706278.md#1" target="_blank">揭开白蛇传的爱情面纱：法海原为除妖高僧</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706278.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Scenic_Attractions_of_West_Lake_30-150x120.jpg" align ="left"></a>建于东晋的镇江泽心寺，唐时始称金山寺，后成为临济宗传承道场，被奉为佛教禅宗经典名寺。金山寺素以“高僧降蛇”为其独特的寺庙文化而名闻遐迩。提到“高僧降蛇”，就不得不说到金山寺的“开山裴祖”——高僧法海，亦即后世诸多版本白蛇传中法海和尚的原型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718913.md#1" target="_blank">作文选登：面对未来，我需具备的能力</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/414629_medium-150x120.jpg" align ="left"></a>当我们迈入人生的不同阶段时，都会遇到各式各样的挑战，我们应该具备多元的能力，让未来的道路走得明亮、灿烂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank">得天扶佑乾隆帝书法艺术 透露什么内心世界？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/88300293_p-150x120.jpg" align ="left"></a>乾隆皇帝在书画上的题识，展露了什么精神气息？一代盛世得天福祐明君对应书画的态度和品味，展露他怎样的内心世界？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:36 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank">得天扶佑乾隆帝书法艺术 透露怎样的内心世界？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/88300293_p-150x120.jpg" align ="left"></a>乾隆皇帝在书画上的题识，展露了什么精神气息？一代盛世得天福祐明君对应书画的态度和品味，展露他怎样的内心世界？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/6/22/n3899772.md#1" target="_blank">诈骗枉法升官 惶惧遭报惨死</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/6/22/n3899772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/shutterstock_1029639910-150x120.jpg" align ="left"></a>县令发现从这里走水路，可以直通县城。但是，乘船的客商，却总要在这里卸货，再雇用脚夫，从陆路把货物运往县城............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717138.md#1" target="_blank">凭蘑菇打开世界市场 秘诀：失败是财富绝不放弃</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717138.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/37c1339eff365b8ee9fe65d06938a073-150x120.jpg" align ="left"></a>仅凭蘑菇，能成为世界级的CEO吗？Green Co.Ltd朴熙珠代表在蘑菇上倾注了一切，建立公司37年之际，已经出口到四十多个国家，每年销售额达到1000亿韩元。韩国国内市场上流通的蘑菇，其中一半是张代表公司的产品。韩国国内八个工厂每天生产的蘑菇量高达八吨，另外还设有海外工厂，仅中国、英国、德国三国就多达六处。生产于庆.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717068.md#1" target="_blank">风行水上，之于新竹</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11717068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180227012254100093-150x120.jpg" align ="left"></a>离别是为了另一次的重逢。人的一生，每个经历过的城市都是相通的，每个走过的脚印，都是相连的，它一步步带领我到今天，成就今天的我。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11711066.md#1" target="_blank">许其正：捉沙马</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11711066.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/2f58294346dfc3ef365b8e573c1ef09e-150x120.jpg" align ="left"></a> 多少乐趣，寄放在捉沙马上。  和螃蟹一样横着跑，却长手长脚，跑得真快。好会跑的沙马！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 8:12 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11709428.md#1" target="_blank">天地清明引(134) 东流水－大疫横行3</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11709428.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/Fotolia_22324167_Subscription_L-150x120.jpg" align ="left"></a>转眼七日已过，户部尚书富察江赞上书皇甫，言京中药草告急，户部亟需银子，置办药草。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721346.md#1" target="_blank">五律：寂</a><br></h3>飘地鹅毛响，接天云影回。 蝉吟如夏吼，人语作冬雷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718633.md#1" target="_blank">五律：清晨</a><br></h3> 遥夜划鸡鸣，犬从三五声。 云岚熏晓色，草露衬时荣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718664.md#1" target="_blank">台湾古典诗：台北考棚</a><br></h3> 腾云浩气火车头，带动鹃城学术遒， 此地布金怀故老，他山攻玉萃名流；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:12 PM			</td></tr>
